# VideoPanorama

./: LICENSE  README.md  RosyWriter-Prefix.pch  main.mm
Classes/: ConnectedVideoPanoramaViewController.swift  Globals.h  MotionSynchronizer.m  VideoCompressor.h  VideoCompressor.m  VideoDecompressor.h  VideoDecompressor.m  VideoPanorama1OpenCV-Bridging-Header.h  VideoPanoramaAppDelegate.h  VideoPanoramaAppDelegate.mm  VideoPanoramaCapturePipeline.h  VideoPanoramaCapturePipeline.m  VideoPanoramaOpenCVRenderer.mm  VideoPanoramaRenderer.h  VideoPanoramaViewController.h  VideoPanoramaViewController.mm
Classes/Utilities/GL/: ShaderUtilities.h
Resources/Images.xcassets/AppIcon.appiconset/: Contents.json
Resources/en.lproj/: Launch.storyboard  Main.storyboard
VideoPanorama/: ReadMe.txt  main.m
VideoPanorama/Classes/: ConnectedVideoPanoramaViewController.swift  SourceViewController.swift  Storyboard.storyboard  VideoPanoramaAppDelegate.h  VideoPanoramaAppDelegate.m  VideoPanoramaCapturePipeline.h  VideoPanoramaCapturePipeline.m  VideoPanoramaOpenCVRenderer.h  VideoPanoramaOpenCVRenderer.mm  VideoPanoramaRenderer.h  VideoPanoramaViewController.m
VideoPanorama/VideoPanorama1.xcodeproj/: project.pbxproj
VideoPanorama1.xcodeproj/: project.pbxproj
VideoPanorama1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
VideoPanorama1.xcodeproj/project.xcworkspace/xcshareddata/: VideoPanorama1.xccheckout
matcher/: CMakeLists.txt  fastmatcher.cpp  fastmatcher.hpp  main.cpp  matcher.cpp  matcher.hpp  painter.cpp  painter.hpp  slowmatcher.cpp  slowmatcher.hpp  utils.cpp  utils.hpp
(+8 files in other folders)
